<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.dlt.com.trivia.Settings"
    android:background="@drawable/background_settings">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <TextView
            android:text="@string/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="70sp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.28"
            android:weightSum="1"
            android:layout_marginStart="140dp">
            <Button
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:id="@+id/on"
                android:textColor="#ffffff"
                android:background="#accb12"
                android:textSize="50sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:id="@+id/off"
                android:textColor="#ffffff"
                android:background="#ff5f47"
                android:textSize="50sp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
